--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Chris Davis</title>
     <!--Bootstrap CDN-->
-    <link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!--jQuery CDN-->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!--Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Exo|Merienda" rel="stylesheet">    <link rel = "stylesheet" href = "assets/css/background.css">
-    <link rel = "stylesheet" href = "assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Exo|Merienda" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/background.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/animista.css">
     <!--Link app.js-->
-    <script type = "text/javascript" src = "assets/javascript/app.js"></script>
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
 </head>
+
 <body>
 
     <!--Container for animated background-->
@@ -23,20 +28,33 @@
         <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/moon2.png" alt="">
         <div class="stars"></div>
         <div class="twinkling"></div>
-        <div class="clouds"></div>  
+        <div class="clouds"></div>
 
-    <div class = "container" id = "introBox">
-        <div class = "row">
-            <div class = "col-md-12">
-                <h4>Hi, my name is Chris Davis and I am a Full Stack Web Developer. Feel free to look at my work. </h4>
+        <!--Introduction Box-->
+
+        <div class="container" id="introBox">
+            <div class="row">
+                <div>
+                    <h1 class="text-center">Chris Davis</h1>
+                    <h2><strong>Full Stack Web Developer</strong></h2>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <button id="portfoliobtn">Portfolio</button>
+                </div>
+            </div>
+
+        </div>
+
+        <!--About me-->
+
+        <div class = "container">
+            <div id = "aboutMeBox">
+                <h1>You've done it</h1>
             </div>
         </div>
-            <div class = "row">
-                <div class = "col-md-12">
-                    <button id = "portfoliobtn">Portfolio</button>
-                </div>
-        </div>
-
-    </div>
 </body>
+
 </html>
