Nav added and main content box added

--- a/index.html
+++ b/index.html
@@ -48,13 +48,35 @@
 
         </div>
 
-        <!--About me-->
+        <!--Nav area-->
 
-        <div class = "container">
-            <div id = "aboutMeBox">
-                <h1>You've done it</h1>
+        <div class="container">
+            <div class="col-md-12">
+                <div id="nav">
+                    <img src="assets/images/Portfolio.jpg" id="myPicture">
+                    <p class="navtext"><strong>Chris Davis</strong></p>
+                    <p class="navtext">Full Stack Web Developer</p>
+                    <div id="navbtnBox">
+                        <button class="navbtn">About</button>
+                        <button class="navbtn">See my work</button>
+                        <button class="navbtn">Contact</button>
+                        <button class="navbtn">Resume</button>
+                    </div>
+                </div>
             </div>
+
+            <div id="mainContent">
+
+                <!--Logos-->
+
+                <div id="logoBox">
+                    <img class="logos" src="assets/images/gitlogo.jpg">
+                    <img class="logos" src="assets/images/linkedinlogo.jpg">
+                </div>
+            </div>
+            
         </div>
+
 </body>
 
 </html>
