Product Genie linked in

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
             <div id = "projectBox">
                     <h3 class = "header">Projects</h3>
                     <div id = "verticalLine"></div>
+
+                    <a href = "https://sandtr0ut.github.io/Project1Group3/"><img class = "projectPics" src = "assets/images/productgenie.jpg"></a>
                     <!--Logos-->
     
                         <img class="logos" src="assets/images/gitlogo.jpg">
