Product Genie linked in

--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
                 <div id = "contactBox">
                         <h3 class = "header">Contact Me</h3>
                         <div id = "verticalLine"></div>
+
+                        <p>LinkedIn:</p><a href = "placeholder"></a>
+                        <p>GitHub:</p><a href = "placeholder"></a>
+
                         <!--Logos-->
         
                             <img class="logos" src="assets/images/gitlogo.jpg">
