--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                 <div id = "contactBox">
                         <h3 class = "header">Contact Me</h3>
                         <div id = "verticalLine"></div>
-
-                        <p>LinkedIn:</p><a href = "placeholder"></a>
-                        <p>GitHub:</p><a href = "placeholder"></a>
-
+                        <div id = "contactText">
+                        <p>LinkedIn: <a href = "https://www.linkedin.com/in/chris-davis-759a99177/">https://www.linkedin.com/in/chris-davis-759a99177/</a></p>
+                        <p>GitHub: <a href = "https://chrisdavis0375.github.io/">https://chrisdavis0375.github.io/</a></p>
+                        </div>
                         <!--Logos-->
         
                             <img class="logos" src="assets/images/gitlogo.jpg">
@@ -120,6 +120,7 @@
                     <div id = "resumeBox">
                             <h3 class = "header">Resume</h3>
                             <div id = "verticalLine"></div>
+                            <img src = "assets/images/Resume.jpg">
                             <!--Logos-->
             
                                 <img class="logos" src="assets/images/gitlogo.jpg">
